--- a/index.html
+++ b/index.html
@@ -39,10 +39,17 @@
 <div  id="result"></div>
 
 </div>
+<div id="result1">
+<img src="sunshine venusaur.png">
+</div>
 
+<div id="result2">
+<img src="buddy barrier.png">
+</div>
 
-
-
+<div id="result3">
+<img src="Space lucario and gengar.png">
+</div>
 
 
 
